Some changes made to resolve overflow

--- a/css/home.css
+++ b/css/home.css
@@ -146,7 +146,7 @@ html, body {
 }
 
 #learn, #volunteer, #share, #donate {
-    width: 40%;
+    width: 35%;
     margin: 10px;
     padding: 10px;
 }
@@ -283,6 +283,7 @@ html, body {
     letter-spacing: 0px;
     color: #354463;
     margin-bottom: 70px;
+    border: 0px;
 }
 
 .part3-card-collections {
@@ -538,13 +539,14 @@ html, body {
 }
 
 .subscribe form {
-    width: 80%;
+    width: 90%;
     display: flex;
     justify-content: space-around;
+    gap: 10px;
 }
 
 #email-input {
-    width: 50%;
+    width: 75%;
     height: 40px;
     border-radius: 100px;
     border: 0px;
@@ -648,6 +650,7 @@ html, body {
     letter-spacing: 0px;
     color: #354463;
     margin-left: auto;
+    padding: 10px;
 }
 
 /* for tablets */
@@ -844,7 +847,7 @@ html, body {
     }
 
 
-    /* for footer section  */
+    /* for footer section - tablet */
 
     .footer {
         justify-content: flex-end;
